--- a/upload.html
+++ b/upload.html
@@ -24,7 +24,7 @@
             </form>
         </div>
         {% if message %}
-            <p style="color: blue">{{ message }}</p>
+            <p style="color: red">{{ message }}</p>
         {% endif %}
         <br/>
         <a href="/">Go back</a>
