--- a/home.html
+++ b/home.html
@@ -32,6 +32,19 @@
                     {% endfor %}
                 {% else %}
                 <p> None</p>
+                <p>Liked By:
+                {% if post.likers %}
+                    {% for liker in post.likers %}
+                        {% if loop.last %}
+                        {{liker.username}} rating: {{liker.rating}}
+                        {% else %}
+                        {{liker.username}} rating: {{liker.rating}},
+                        {% endif %}
+                    {% endfor %}
+                {% else %}
+                None
+                {% endif %}
+                </p>
                 {% endif %}
                 </p>
             {% endfor %}
